--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-async-script-loader": "^0.3.0",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "react-sidebar": "^3.0.2",
     "react-throttle": "^0.3.0"
   },
   "scripts": {
