--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "escape-string-regexp": "^2.0.0",
+    "eslint": "^8.13.0",
     "react": "^16.14.0",
     "react-async-script-loader": "^0.3.0",
     "react-dom": "^16.14.0",
