--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "escape-string-regexp": "^2.0.0",
-    "react": "^16.14.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.0.0",
     "react-async-script-loader": "^0.3.0",
-    "react-dom": "^16.14.0",
+    "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
     "react-sidebar": "^3.0.2",
     "react-throttle": "^0.3.0"
